refactor: create one model roomInfo and deleted duplicated models for each language, update room model in draw.io
