# gf-server-api/autogenerated/swagger.yml
@@ -237,54 +237,16 @@ components:
     Dictionary:
       properties:
         en:
-          $ref: "#/components/schemas/English"
+          $ref: "#/components/schemas/RoomInfo"
         ru:
-          $ref: "#/components/schemas/Russian"
+          $ref: "#/components/schemas/RoomInfo"
         ge:
-          $ref: "#/components/schemas/Georgian"
+          $ref: "#/components/schemas/RoomInfo"
       required:
         - en
         - ru
         - ge
-    English:
-      properties:
-        title:
-          type: string
-          description: title of room.
-          example: Single room
-        description:
-          type: string
-          description: short description of room.
-          example: A comfortable room
-        descriptionLong:
-          type: string
-          description: long description of room.
-          example: Wake up to the breathtaking beauty of the Pindus mountains in a double
-            room
-      required:
-        - title
-        - description
-        - descriptionLong
-    Georgian:
-      properties:
-        title:
-          type: string
-          description: title of room.
-          example: Single room
-        description:
-          type: string
-          description: short description of room.
-          example: A comfortable room
-        descriptionLong:
-          type: string
-          description: long description of room.
-          example: Wake up to the breathtaking beauty of the Pindus mountains in a double
-            room
-      required:
-        - title
-        - description
-        - descriptionLong
-    Russian:
+    RoomInfo:
       properties:
         title:
           type: string
