# gf-webapp/src/autogenerated/gf-server-api/models/index.ts
@@ -5,13 +5,11 @@ export * from './ApiBookingRequestPostRequest';
 export * from './Currency';
 export * from './Customer';
 export * from './Dictionary';
-export * from './English';
-export * from './Georgian';
 export * from './NewRoom';
 export * from './Period';
 export * from './Price';
 export * from './Room';
 export * from './RoomBooked';
+export * from './RoomInfo';
 export * from './RoomPaid';
 export * from './RoomServices';
-export * from './Russian';
